crates/ruff_python_parser/tests/snapshots/invalid_syntax@if_stmt_invalid_elif_test_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/if_stmt_invalid_elif_test_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..56,
        body: [
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 0..55,
                    test: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 3..4,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 10..14,
                            },
                        ),
                    ],
                    elif_else_clauses: [
                        ElifElseClause {
                            range: 15..32,
                            node_index: NodeIndex(None),
                            test: Some(
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 20..22,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 21..22,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ),
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(None),
                                        range: 28..32,
                                    },
                                ),
                            ],
                            runtime_body: None,
                            runtime_orelse: None,
                        },
                        ElifElseClause {
                            range: 33..55,
                            node_index: NodeIndex(None),
                            test: Some(
                                Yield(
                                    ExprYield {
                                        node_index: NodeIndex(None),
                                        range: 38..45,
                                        value: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 44..45,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ),
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(None),
                                        range: 51..55,
                                    },
                                ),
                            ],
                            runtime_body: None,
                            runtime_orelse: None,
                        },
                    ],
                    runtime_body: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | if x:
2 |     pass
3 | elif *x:
  |      ^^ Syntax Error: invalid syntax
4 |     pass
5 | elif yield x:
  |


  |
3 | elif *x:
4 |     pass
5 | elif yield x:
  |      ^^^^^^^ Syntax Error: yield expression cannot be used here
6 |     pass
  |
